<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_24"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/billsFragment"
        android:icon="@drawable/ic_bills_24"
        android:title="@string/nav_bills" />
    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/ic_wallet_24"
        android:title="@string/nav_wallet" />
    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_grid_24"
        android:title="@string/nav_categories" />
    <item
        android:id="@+id/reportsFragment"
        android:icon="@drawable/ic_reports_24"
        android:title="@string/nav_reports" />
</menu>
